VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc12Down.err
[8MB/455.1MB][  1%][>                                                 ][2MB/s]  [16MB/455.1MB][  3%][=>                                                ][3.2MB/s]  [24MB/455.1MB][  5%][==>                                               ][3.429MB/s]  [32MB/455.1MB][  7%][===>                                              ][3.556MB/s]  [40MB/455.1MB][  8%][====>                                             ][4MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][4.364MB/s]  [56MB/455.1MB][ 12%][======>                                           ][4.667MB/s]  [64MB/455.1MB][ 14%][=======>                                          ][4.923MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][4.8MB/s]  [80MB/455.1MB][ 17%][========>                                         ][5MB/s]  [88MB/455.1MB][ 19%][=========>                                        ][5.176MB/s]  [96MB/455.1MB][ 21%][==========>                                       ][5.333MB/s]  [104MB/455.1MB][ 22%][===========>                                      ][5.2MB/s]  [112MB/455.1MB][ 24%][============>                                     ][5.333MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][5.455MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][5.565MB/s]  [136MB/455.1MB][ 29%][==============>                                   ][5.667MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][5.76MB/s]  [152MB/455.1MB][ 33%][================>                                 ][5.63MB/s]  [160MB/455.1MB][ 35%][=================>                                ][5.714MB/s]  [168MB/455.1MB][ 36%][==================>                               ][5.6MB/s]  [176MB/455.1MB][ 38%][===================>                              ][5.677MB/s]  [184MB/455.1MB][ 40%][====================>                             ][5.576MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][5.486MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][5.556MB/s]  [208MB/455.1MB][ 45%][======================>                           ][5.474MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][5.4MB/s]  [224MB/455.1MB][ 49%][========================>                         ][5.463MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][5.395MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][5.455MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][5.391MB/s]  [256MB/455.1MB][ 56%][============================>                     ][5.333MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][5.388MB/s]  [272MB/455.1MB][ 59%][=============================>                    ][5.333MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][5.385MB/s]  [288MB/455.1MB][ 63%][===============================>                  ][5.333MB/s]  [296MB/455.1MB][ 65%][================================>                 ][5.286MB/s]  [304MB/455.1MB][ 66%][=================================>                ][5.333MB/s]  [312MB/455.1MB][ 68%][==================================>               ][5.288MB/s]  [320MB/455.1MB][ 70%][===================================>              ][5.333MB/s]  [328MB/455.1MB][ 72%][====================================>             ][5.29MB/s]  [336MB/455.1MB][ 73%][====================================>             ][5.333MB/s]  [344MB/455.1MB][ 75%][=====================================>            ][5.292MB/s]  [352MB/455.1MB][ 77%][======================================>           ][5.333MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][5.294MB/s]  [368MB/455.1MB][ 80%][========================================>         ][5.257MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][5.222MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][5.189MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][5.158MB/s]  [400MB/455.1MB][ 87%][===========================================>      ][5.128MB/s]  [408MB/455.1MB][ 89%][============================================>     ][5.1MB/s]  [416MB/455.1MB][ 91%][=============================================>    ][5.073MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][5.048MB/s]  [432MB/455.1MB][ 94%][===============================================>  ][5.082MB/s]  [440MB/455.1MB][ 96%][================================================> ][5.057MB/s]  [448MB/455.1MB][ 98%][=================================================>][5.034MB/s]  [455.1MB/455.1MB][100%][==================================================][5.001MB/s]  [455.1MB/455.1MB][100%][==================================================][5.001MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_41824/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_41824/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
